--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-title: Kasamsun CV
+plugins: jekyll-remote-theme
 description: Kasamsun CV since 1994
