--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: pages-themes/minimal@v0.2.0
-plugins: jekyll-remote-theme
+plugins:
+- jekyll-remote-theme
 description: Kasamsun CV since 1994
