--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-description: Kasamsun CV since 1994
+description: since 1994
